# computer-state

./: ARCHITECTURE.md  README.md  index.html  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_metrics.sql
src-tauri/src/: collector.rs  database.rs  http.rs  lib.rs  main.rs  model.rs  settings.rs  state.rs
src/components/ui/: Button.tsx  Chart.tsx  Switch.tsx
src/features/metrics/: MetricsPage.test.ts  MetricsPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: api.test.ts  api.ts
